<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="empty"></string>
    <string name="app_name">Java QA</string>
    <string name="imagedescription">Welcome</string>
    <string name="question_of_day">Question Of The Day</string>
    <string name="browse_ques">Browse Questions</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="update_question">Update Questions</string>
    <string name="send_feeback">Send Feedback</string>
    <string name="last_update_on">Last Update On:</string>
    <string name="update_main_message">Update to latest available questions. Requires app restart after update. </string>
    <string name="current_update_status">Current Update Status:</string>
    <string name="update_now">Update Now</string>
    <string name="email_address">Email Address</string>
    <string name="message">Message</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="update">Update</string>
    <string name="category">Categories</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="title">Title</string>
    <string name="tap_view_question">Swipe right to view next question</string>
    <string name="tap_view_answer">Tap To View Answer</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="in_progress">In Progress</string>
    <string name="feedback_successful">Thanks.Your Feedback has been sent!</string>
    <string name="default_update_date">10/05/2014</string>
    <string name="default_update_status">Ready</string>
    <string name="updateUrl">https://github.com/fromdev/fromdev-static/raw/gh-pages/release/android/qaconfig.json.zip</string>

</resources>