<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/menu_background"
    android:orientation="vertical"
    tools:context="com.special.MenuActivity$HomeFragment" >

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:padding="7dp"
                android:text="@string/home"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_large" />
        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/bar_separator_color"
            android:contentDescription="@string/title" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/imagedescription"
                android:src="@drawable/logotrans" />

            <Button
                android:id="@+id/btn_question_of_day"
                style="@style/UIButtonInverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="12dp"
                android:text="@string/question_of_day"
                android:textSize="@dimen/textsize_medium" />

            <Button
                android:id="@+id/btn_browse_question"
                style="@style/UIButtonInverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="12dp"
                android:text="@string/browse_ques"
                android:textSize="@dimen/textsize_medium" />

            <Button
                android:id="@+id/btn_more"
                style="@style/UIButtonInverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="12dp"
                android:text="@string/more"
                android:textSize="@dimen/textsize_medium" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>