<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/actfeedback_btnhome"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:padding="15dp"
                android:background="@drawable/titlebar_menu_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:padding="7dp"
                android:text="@string/feedback"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_large" />
        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/bar_separator_color"
            android:contentDescription="@string/empty" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/actfback_txtemail"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="1"
            android:background="@drawable/tab_default"
            android:ems="10"
            android:hint="@string/email_address"
          
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@android:color/black" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/actfback_txtmessage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="8"
            android:background="@drawable/tab_default"
            android:gravity="top|left"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:lines="10"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/actfback_btnfeedback"
            style="@style/UIButtonInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:padding="12dp"
            android:text="@string/send_feeback"
            android:textSize="@dimen/textsize_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
 <ScrollView
        android:id="@+id/ScrollView01"  
        android:layout_height="fill_parent"   
        android:layout_width="fill_parent"> 
    </ScrollView>
</LinearLayout>