<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/menu_background"
    android:orientation="vertical"
    tools:context="com.special.MenuActivity$HomeFragment" >

    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/actmore_btnhome"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/titlebar_menu_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:padding="7dp"
            android:text="@string/more"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_large" />
    </FrameLayout>

    <ImageView
        android:id="@+id/ImageView1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/FrameLayout1"
        android:background="@color/bar_separator_color"
        android:contentDescription="title" />

    <RelativeLayout
        android:id="@+id/centralcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ImageView1"
      
         android:background="@android:color/white" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_feedback"
                style="@style/UIButtonInverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="12dp"
                android:text="@string/feedback"
                android:textSize="@dimen/textsize_medium" />

            <Button
                android:id="@+id/btn_update_question"
                style="@style/UIButtonInverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="12dp"
                android:text="@string/update_question"
                android:textSize="@dimen/textsize_medium" />

            <Button
                android:id="@+id/btn_about"
                style="@style/UIButtonInverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="12dp"
                android:text="@string/about"
                android:textSize="@dimen/textsize_medium" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>