<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/actudateques_btnhome"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="left|center_vertical"
                
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/titlebar_menu_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:padding="7dp"
                android:text="@string/update"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_large" />
        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/bar_separator_color"
            android:contentDescription="title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/actudateques_txtlastudate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/last_update_on"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/actudateques_txtlastudateon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="10/05/2014"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/actudateques_txtudatestatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
               android:layout_weight="2"
                android:text="@string/current_update_status" 
                  android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/actudateques_txtudatestatusvalue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="ready"
                 />
        </LinearLayout>

        <Button
            android:id="@+id/actudateques_btnudate"
            style="@style/UIButtonInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/update_now" 
             android:textSize="@dimen/textsize_medium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15" />
    </LinearLayout>

</LinearLayout>